--- a/androidapp/app/src/main/res/values/strings.xml
+++ b/androidapp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Login UI</string>
+    <string name="app_name">Decam</string>
 
     <string name="hi_n_welcome_to_your_app">Hi,\nWelcome to your app</string>
 
